Make sure focus state looks better and doesn't get cut off for side menu

--- a/content/scss/_c-side-menu.scss
+++ b/content/scss/_c-side-menu.scss
@@ -23,8 +23,13 @@
   display: flex;
   position: relative;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background: $color-gray-25;
+  }
+
+  &:focus {
+    z-index: 2;
   }
 }
 
